# block_nullspace_benchmarks

./: CMakeLists.txt  README.md  block.cpp  ns_block.cpp  ns_block_vexcl.cpp  ns_hybrid1.cpp  ns_hybrid2.cpp  ns_hybrid2_vexcl.cpp  ns_scalar.cpp  read_problem.cpp  read_problem.hpp  scalar.cpp
